--- a/css/style.css
+++ b/css/style.css
@@ -1,143 +1,205 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
-    max-width: 800px;
-    margin: 0 auto;
-
+  max-width: 800px;
+  margin: 0 auto;
 }
-header{
-    
-    display: flex;
-    justify-content: space-between;
-    align-items:center; 
-    height: 80px;
-border-image: url('/media/examples/border-diamonds.png') 30 / 19px round;
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 80px;
+  border-image: url("/media/examples/border-diamonds.png") 30 / 19px round;
 }
 .headerLine {
-    display: block;
-    background-image: url('../assets/hr-img.png');
-    background-repeat: repeat;
-    background-position: center bottom;
+  display: block;
+  background-image: url("../assets/hr-img.png");
+  background-repeat: repeat;
+  background-position: center bottom;
 }
 .lgooleft {
-    display : flex;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 600px;
+}
+.lgooleft img {
+  float: left;
+}
+
+.logo-text {
+  margin-left: 4px;
+  float: right;
+  padding: 0 2px;
+  margin-top: 4px;
+}
+.logo-text h1 {
+  font-family: "Yellowtail", cursive;
+  font-size: 2rem;
+  font-weight: 800;
+  margin-bottom: 2px;
+}
+.logo-text p {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 7px;
+  color: gray;
+}
+
+.social-icons span:first-child {
+  margin-right: 8px;
+}
+.social-icons span:first-child a {
+  margin: -1px;
+}
+.social-icons span:nth-child(2) a {
+  margin: -1px;
+}
+main article {
+  margin-top: 30px;
+}
+
+main article:nth-child(1) {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+main article:nth-child(1) a {
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 8px;
+  color: gray;
+}
+main article:nth-child(1) img {
+  padding-right: 4px;
+}
+main article:nth-child(1) h2 {
+  font-size: 36px;
+  font-family: "Oswald", sans-serif;
+  font-weight: 900;
+}
+main article:nth-child(1) p {
+  padding-top: 5px;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 8px;
+  color: gray;
+}
+main article:nth-child(2) img {
+  width: 100%;
+}
+
+main article:nth-child(3) p {
+  margin-top: 15px;
+  text-indent: 30px;
+  color: gray;
+  line-height: 1.5;
+}
+.recipe {
+  background-image: url("../assets/list-bg.png");
+  height: 300px;
+}
+main article:nth-child(4) {
+  display: flex;
+  justify-content: space-around;
+  align-items: flex-start;
+}
+
+.recipe .float-right li:nth-child(2),
+.float-right li:nth-child(3) {
+  text-decoration: line-through;
+}
+
+.recipe .float-right input {
+  cursor: pointer;
+  border: none;
+}
+
+.recipe .float-right input:checked {
+  color: #6f684c;
+  background-color: transparent;
+  border: none;
+}
+article ul {
+  line-height: 2;
+  margin-top: 35px;
+  font-family: "Pangolin", cursive;
+  color: #6f684c;
+  /* font-size: 21px.; */
+  width: 300px;
+}
+
+input [type="checkbox"]:checked:after {
+  background-image: url(), linear-gradient(135deg, #b1b6be 0%, #fff 100%);
+  background-color: tomato;
+}
+
+.BottomLine {
+  display: block;
+  background-image: url("../assets/hr-img.png");
+  background-repeat: repeat;
+  background-position: center bottom;
+  margin-top: 30px;
+}
+.share-recipe  {
+    display: flex;
+    justify-content: space-between;
+    width: 100%;;
+    
+}
+
+
+.share-recipe .float-left {
+    display: flex;
     justify-content: space-between;
     align-items: center;
     width: 600px;
+    margin-right: 30px;
 }
-.lgooleft img {
-    float:left; 
+.float-left img {
+    margin-right: 10px;
+    width: 50px;
 }
-
-.logo-text  {
-   margin-left: 4px;
-   float: right;
-   padding: 0 2px;
-   margin-top: 4px;
+section div {
+    padding: 10px;
 }
-.logo-text  h1 {
-    font-family: 'Yellowtail', cursive;
-    font-size :2rem;
-    font-weight: 800;
-    margin-bottom: 2px;
- }
- .logo-text  p {
-    font-family: Arial, Helvetica, sans-serif;
-    font-size :7px;
-    color:gray
- }
-
- .social-icons span:first-child {
-     margin-right: 8px;
-     
- }
- .social-icons span:first-child a {
-   margin: -1px;
-    
+section div p:first-child {
+    padding-bottom: 10px;
+    font-weight: 700;
 }
-.social-icons span:nth-child(2) a {
-    margin: -1px;
-     
- }
-main article{
-    margin-top: 30px;
-    
-}
-
-main article:nth-child(1){
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    
-}
-main article:nth-child(1) a{
-text-decoration: none;
-font-family: Arial, Helvetica, sans-serif;
-font-size:8px ;
-color:gray;
-
-}
-main article:nth-child(1) img{
-   padding-right: 4px;
-    }
- main article:nth-child(1) h2 {
-  
-    font-size:36px ;
-     font-family: 'Oswald', sans-serif;
-    font-weight: 900;
- }
- main article:nth-child(1) p {
-     padding-top: 5PX ;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size:8px ;
-    color:gray;
-}
-main article:nth-child(2) img{
-    width: 100%;
-     }
-
-     main article:nth-child(3) p{
-       margin-top: 15px;
-       text-indent: 30px;
-       color:gray;
-       line-height: 1.5;
-         }
-         .recipe{
-            background-image: url('../assets/list-bg.png') ;
-            height: 300px;
-        }
-         main article:nth-child(4){
-            display: flex;
-            justify-content: space-around;
-            align-items: flex-start;
-         
-        }
-
-        .float-right li:nth-child(2),.float-right li:nth-child(3) {
-            text-decoration: line-through;
-           
-        }
+section div p:last-child {
+    font-size: 15px;
+   color:gray;
    
-        .float-right  input{
-            cursor: pointer;
-            border: none;
-        }
-       
+}
 
-        .float-right input:checked {
-            color: #6F684C;
-            background-color: transparent;
-            border: none;
-        }
-        article ul {
-           
-            line-height: 2;
-            margin-top: 35px;
-            font-family: 'Pangolin', cursive;
-            color: #6F684C;
-            /* font-size: 21px.; */
-            width: 300px;
-        }
 
-        
+.share-recipe .share-right{
+    background-color: #955440;
+    height: 50px;
+    width: 170px;
+    color:white;
+    display: flex;
+    align-items: center;
+   justify-content: center;
+   font-family: Arial, Helvetica, sans-serif;
+}
+
+footer{
+    display: flex;
+    align-items: center;
+   justify-content: center;
+   flex-direction: column;
+   color:gray;
+   font-family: Arial, Helvetica, sans-serif;
+   line-height: 1.5;
+   font-size: 12px;
+   margin-top: 15px;
+   margin-bottom: 15px;
+}
+footer img{
+   display: block;
+   z-index: 1;
+   margin-bottom: 7px;
+}
+
+
